[gd_scene load_steps=2 format=3 uid="uid://blu3cphe608kb"]

[ext_resource type="Script" path="res://Script/gameMenu.gd" id="1_gjhso"]

[node name="GameMenu" type="Node2D"]
script = ExtResource("1_gjhso")

[node name="MenuButton" type="Button" parent="."]
offset_left = 17.0
offset_top = 18.0
offset_right = 70.0
offset_bottom = 49.0
text = "Menu"

[node name="Resume" type="Button" parent="."]
visible = false
offset_left = 447.0
offset_top = 446.0
offset_right = 537.0
offset_bottom = 477.0
text = "Reprendre"

[node name="Abandon" type="Button" parent="."]
visible = false
offset_left = 442.0
offset_top = 526.0
offset_right = 547.0
offset_bottom = 557.0
text = "Abandonner"

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Abandon" to="." method="_on_abandon_pressed"]
